<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>yolo26_ros2</name>
  <version>0.0.0</version>
  <description>ROS 2 package for real-time object detection using YOLO26 models with USB camera integration</description>
  <maintainer email="mikelikesrobots@outlook.com">Michael Hart (Mike Likes Robots)</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>

  <exec_depend>vision_msgs</exec_depend>
  <exec_depend>python3-ultralytics-pip</exec_depend>
  <exec_depend>usb_cam</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
